--- a/WebContent/index2.html
+++ b/WebContent/index2.html
@@ -15,13 +15,14 @@ td{
 }
 </style>
 
-
 </head>
+
+
 <body>
 <script type="text/javascript" src="jquery/jquery-3.2.1.min.js">
-		
-	</script>
-	     <script src="jquery-3.1.1.min.js"></script>
+</script>
+
+<script src="jquery-3.1.1.min.js"></script>
 	  
 <div class="container">
 	<div class="row clearfix">
@@ -40,8 +41,9 @@ td{
 		
 			 <button  onclick="window.location.href='/AirInfo/logic/user/info'" class="btn btn-default btn-block" type="button">用户信息表</button> 
 		
-			 <button class="btn btn-default btn-block" type="button">充值信息表</button> 
-			 <button class="btn btn-default btn-block" type="button">得分信息表</button>
+			 <button  onclick="window.location.href='/AirInfo/logic/consumption/info'" class="btn btn-default btn-block" type="button">充值信息表</button> 
+			 <button  onclick="window.location.href='/AirInfo/logic/score/info'" class="btn btn-default btn-block" type="button">得分信息表</button>
+			 <button  onclick="window.location.href='/AirInfo/logic/score/rank'" class="btn btn-default btn-block" type="button">排行榜</button>
 		</div>
 		<div class="col-md-4 column">
 		</div>
